# AEP_current

./: .gitignore  Procfile  README.md  dccaep.sublime-project  procfile
aep/: Pipfile  Procfile  errors.csv  get_courses.py  get_user.py  get_users.py  participation_detail_report.csv  pyproject.toml  requirements.txt  sections_export.csv  wioa.py
aep/academics/: admin.py  models.py
aep/academics/migrations/: 0001_initial.py  0002_auto_20171004_1015.py  0002_initial.py  0003_auto_20171016_1116.py  0003_milestone_alter_certificate_certifier_and_more.py  0004_auto_20190605_2211.py  0005_certificate_coursecompletion_credential.py  0006_auto_20210122_2238.py  0007_auto_20210204_2013.py  0008_skillmastery_mastered.py  0009_auto_20210308_2112.py  0010_alter_certificate_certifier_and_more.py  0012_course_nrs_type.py  (+1 more)
aep/assessments/: admin.py  forms.py  models.py  rules.py  tasks.py  urls.py  views.py
aep/coaching/: admin.py  forms.py  models.py  rules.py  tasks.py  urls.py  views.py
aep/config/: celery.py  urls.py  wsgi.py
aep/core/: forms.py  tasks.py  utils.py
aep/inventory/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
aep/people/: CreateWithWIOA.txt  admin.py  forms.py  models.py  tasks.py  urls.py  views.py  wru.py
aep/requirements/: base.txt
aep/sections/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
aep/semesters/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
aep/staticfiles/: staticfiles.json
aep/templates/: base.html  humans.txt  orientation_base.html  pagination.html
(+517 files in other folders)
