[project]
name = "aep"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "beautifulsoup4==4.14.3",
    "celery==5.6.3",
    "crispy-bootstrap3==2024.1",
    "dj-database-url==3.1.2",
    "django==5.2.13",
    "django-anymail==14.0",
    "django-author==1.2.0",
    "django-crispy-forms==2.6",
    "django-formtools==2.5.1",
    "django-import-export==4.4.0",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "gunicorn==25.3.0",
    "plivo==4.59.6",
    "psycopg2==2.9.11",
    "pytz==2026.1.post1",
    "redis",
    "requests==2.33.1",
    "rules==3.5",
    "whitenoise==6.12.0",
]
